--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body onload='draw();'>
         <div>
             <canvas id='thermometer' width='200' height='900'></canvas>
-            <div style='left:0;right:0;margin-left:auto;margin-right:auto;'>
+            <div style='position:absolute;left:0;right:0;margin-left:auto;margin-right:auto;'>
                 <form id='drawThermometer'>
                     <input type="text" id="temp" name="temp" value="-30" maxlength="3"/>
                     <br>
