--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     </head>
     <body onload='draw();'>
         <div>
+					<center>
             <canvas id='thermometer' width='200' height='900'></canvas>
-            <div style='position:absolute;left:0;right:0;margin-left:auto;margin-right:auto;'>
+            
                 <form id='drawThermometer'>
                     <input type="text" id="temp" name="temp" value="-30" maxlength="3"/>
                     <br>
@@ -16,6 +17,7 @@
                     <input type="button" value="Draw" onclick="draw();">
                 </form>
             </div>
+					</center>
         </div>
     </body>
 </html>
