--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             
                 <form id='drawThermometer'>
                     <input type="text" id="temp" name="temp" value="-30" maxlength="3"/>
+										<button type="button" onclick="connect()">Click Me!</button>
                 </form>
             </div>
 					</center>
