--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <html lang="en">
     <head>
         <meta charset='utf-8' />
-        <title>Canvas Thermometer </title>
+        <title>ESP32 BLE Thermometer </title>
         <script src='thermometer.js'></script>
     </head>
     <body onload='draw();'>
+		<button type="button" class="block" onclick="connect()">Get Temperature</button>
         <div>
 					<center>
             <canvas id='thermometer' width='200' height='900'></canvas>
             
                 <form id='drawThermometer'>
                     <input type="text" id="temp" name="temp" value="-30" maxlength="3"/>
-										<button type="button" onclick="connect()">Click Me!</button>
                 </form>
             </div>
 					</center>
