--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script src='thermometer.js'></script>
     </head>
     <body onload='draw();'>
-		<button type="button" class="block" onclick="connect()">Get Temperature</button>
+		<button type="button" class="button button3" onclick="connect()">Get Temperature</button>
 					<center>
             <canvas id='thermometer' width='200' height='900'></canvas>
             
