--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta charset='utf-8' />
         <title>ESP32 BLE Thermometer </title>
         <script src='thermometer.js'></script>
+				<link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body onload='draw();'>
 		<button type="button" id="act_button" class="button button3" onclick="action()">Get Temperature</button>
