--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 				<link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body onload='draw();'>
-		<button type="button" id="act_button" class="button button3" onclick="action()" value="Get Temperature"></button>
+		<button type="button" id="act_button" class="button button3" onclick="action()">Get Temperature</button>
 					<center>
             <canvas id='thermometer' width='200' height='900'></canvas>
             
