--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 					<center>
             <canvas id='thermometer' width='200' height='900'></canvas>
             
-                <form id='drawThermometer'>
-                    <input type="text" id="temp" name="temp" value="-30" maxlength="3"/>
-                </form>
+						<p id="tValue">0 °C</p>
 					</center>
     </body>
 </html>
