--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     </head>
     <body onload='draw();'>
 		<button type="button" id="act_button" class="button button3" onclick="action()">Get Temperature</button>
+		<button type="button" id="sim_button" class="button button3" onclick="simulation()">Simulate</button>
 					<center>
             <canvas id='thermometer' width='200' height='900'></canvas>
             
-						<p id="tValue">0 °C</p>
+						<p id="tValue"style="font-size:100px;">0 °C</p>
 					</center>
     </body>
 </html>
