--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body onload='draw();'>
 		<button type="button" id="act_button" class="button button3" onclick="action()">Get Temperature</button>
-		<button type="button" id="sim_button" class="button button3" onclick="simulation()">Simulate</button>
+		<button type="button" id="sim_button" class="button button3" onclick="simulate()">Simulate</button>
 					<center>
             <canvas id='thermometer' width='200' height='900'></canvas>
             
